# zoitechat

./: .gitattributes  .gitmodules  COPYING  Doxyfile  Makefile  README.md  changelog.rst  meson.build  meson_options.txt  meson_post_install.py  readme.md  troubleshooting.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: appimage-build.yml  debian-build.yml  flatpak-build.yml  macos-build.yml  manjaro-package-build.yml  msys-build.yml  openbsd-build.yml  solus-eopkg-build.yml  theme-tests.yml  windows-arm64-msys2.yml  windows-build.yml
.pc/: applied-patches
data/: meson.build  zoitechat.gresource.xml  zoitechat.gresource.xml.in
data/emoji/: README.md  VERSIONS
data/fonts/: OFL.txt  README.md  meson.build
data/icons/: generate_icons.py  meson.build
data/misc/: build_offline_docs.py  fetch_offline_docs.py  install_offline_docs.py  io.github.Zoitechat.appdata.xml.in  meson.build  net.zoite.Zoitechat.Plugin.metainfo.xml.in  net.zoite.Zoitechat.ThemeManager.desktop.in  net.zoite.Zoitechat.ThemeManager.xml  net.zoite.Zoitechat.appdata.xml.in  net.zoite.Zoitechat.desktop.in.in  net.zoite.Zoitechat.mime.xml  net.zoite.Zoitechat.xml  org.Zoitechat.Plugin.metainfo.xml.in  org.Zoitechat.appdata.xml.in  org.Zoitechat.desktop.in.in  org.zoitechat.ZoiteChat.Plugin.metainfo.xml.in  org.zoitechat.ZoiteChat.desktop.in.in  org.zoitechat.ZoiteChat.metainfo.xml.in
debian/: changelog  control  copyright  io.github.Zoitechat.appdata.xml  net.zoite.Zoitechat.appdata.xml  rules  watch  zoitechat-common.install  zoitechat-dev.install  zoitechat-lua.install  zoitechat-perl.install  zoitechat-plugins.install  zoitechat-python3.install  zoitechat.install  zoitechat.lintian-overrides
debian/default_servers/: debian  ubuntu
debian/patches/: series
debian/source/: lintian-overrides
debian/upstream/: metadata  signing-key.asc
flatpak/: README.md  io.github.Zoitechat.json  net.zoite.Zoitechat.json  org.Zoitechat.json  org.zoitechat.ZoiteChat.json  perl.json  python3-cffi.json  python3.json
osx/: DEBUGGING.md  Info.plist.in  launcher.sh  makebundle.sh  settings.ini  zoitechat.bundle  zoitechat.icns
packaging/fedora/: zoitechat.spec
packaging/manjaro/: PKGBUILD
packaging/solus/: package.yml
plugins/: meson.build
plugins/checksum/: checksum.c  checksum.vcxproj
plugins/exec/: exec.c  exec.vcxproj
plugins/fishlim/: dh1080.c  fish.c  fishlim.def  fishlim.vcxproj  fishlim.vcxproj.filters  irc.c  keystore.c  keystore.h  meson.build  plugin_zoitechat.c  plugin_zoitechat.h  utils.h
plugins/fishlim/tests/: tests.c
plugins/lua/: lua.c  lua.vcxproj
plugins/perl/: meson.build  perl.c  perl.def  perl.vcxproj
plugins/perl/lib/: ZoiteChat.pm
plugins/perl/lib/ZoiteChat/: Embed.pm
plugins/python/: _zoitechat.py  generate_plugin.py  meson.build  python.py  python3.vcxproj  python3.vcxproj.filters  python38.vcxproj
plugins/sysinfo/: meson.build  sysinfo-backend.h  sysinfo.c  sysinfo.vcxproj
plugins/sysinfo/osx/: backend.m
plugins/sysinfo/unix/: backend.c  pci.c
plugins/sysinfo/win32/: backend.c
plugins/upd/: upd.c  upd.vcxproj
plugins/winamp/: winamp.c  winamp.def  winamp.vcxproj
po/: POTFILES  POTFILES.skip  af.po  am.po  ast.po  az.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  hi.po  hu.po  id.po  it.po  ja_JP.po  kn.po  ko.po  lt.po  lv.po  mk.po  ml.po  ms.po  nb.po  nl.po  no.po  pa.po  pl.po  pt.po  pt_BR.po  (+15 more)
src/: meson.build
src/common/: cfgfiles.c  cfgfiles.h  chanopt.c  chanopt.h  common.vcxproj  common.vcxproj.filters  ctcp.h  dcc.c  dcc.h  emoji-data.c  emoji-data.h  fe.h  gtk3-theme-service.c  gtk3-theme-service.h  hct.c  hct.h  history.c  history.h  ignore.c  ignore.h  inbound.c  inbound.h  inet.h  meson.build  miniz.c  modes.c  modes.h  network.c  network.h  notify.c  notify.h  outbound.c  outbound.h  plugin-identd.c  plugin-identd.h  plugin-timer.c  plugin-timer.h  plugin.c  plugin.h  proto-irc.c  (+31 more)
src/common/dbus/: dbus-client.c  dbus-plugin.c  dbus-plugin.h
src/common/sysinfo/: sysinfo.h
src/common/tests/: test-emoji-data.c  test-gtk3-theme-service.c
src/fe-gtk/: ascii.c  ascii.h  banlist.c  banlist.h  chanlist.c  chanlist.h  chanview-tabs.c  chanview-tree.c  chanview.c  chanview.h  custom-list.c  custom-list.h  dccgui.c  editlist.c  editlist.h  emoji-picker.c  emoji-picker.h  fe-gtk.c  fe-gtk.h  fe-gtk.vcxproj  fe-gtk.vcxproj.filters  fkeys.c  fkeys.h  gtkutil.c  gtkutil.h  icon-resolver.c  icon-resolver.h  ignoregui.c  inline-image.c  inline-image.h  joind.c  joind.h  maingui.c  maingui.h  menu.c  menu.h  meson.build  notifygui.c  notifygui.h  palette.c  (+29 more)
src/fe-gtk/notifications/: notification-backend.h  notification-freedesktop.c  notification-windows.c  notification-winrt.cpp  notifications-winrt.vcxproj
src/fe-gtk/theme/: theme-access.c  theme-access.h  theme-application.c  theme-application.h  theme-css.c  theme-css.h  theme-gtk3.c  theme-gtk3.h  theme-manager.c  theme-manager.h  theme-palette.c  theme-palette.h  theme-policy.c  theme-policy.h  theme-preferences.c  theme-preferences.h  theme-runtime.c  theme-runtime.h
src/fe-gtk/theme/tests/: test-theme-access-routing.c  test-theme-application-input-style.c  test-theme-gtk3-settings.c  test-theme-gtk3-stub.c  test-theme-manager-auto-refresh.c  test-theme-manager-dispatch-routing.c  test-theme-manager-policy.c  test-theme-preferences-gtk3-populate.c  test-theme-runtime-persistence.c
src/fe-text/: fe-text.c  fe-text.vcxproj
src/fe-win32/: fe-win32.c  fe-win32.vcxproj  fe-win32.vcxproj.filters  meson.build
src/libenchant_win8/: libenchant_win8.vcxproj  win8_provider.cpp
tests/: test_invariant_fish.c
tools/: gen-emoji-data.py
win32/: appusermodelid.h  config.h.tt  version.txt  zoitechat.props  zoitechat.sln
win32/copy/: changelog.url  copy.vcxproj  readme.url
win32/installer/: installer.vcxproj  installer.vcxproj.filters  zoitechat-arm64.iss  zoitechat-mingw64.iss.tt  zoitechat.iss.tt
win32/nls/: nls.vcxproj
win32/spelling/: build-spelling.bat  zoitechat-spelling.skel.iss
(+4 files in other folders)
