icondir = join_paths(get_option('datadir'), 'icons/hicolor')
install_data(
  'zoitechat.png',
  rename: 'net.zoite.Zoitechat.png',
  install_dir: join_paths(icondir, '48x48/apps')
)
install_data(
  'zoitechat.svg',
  rename: 'net.zoite.Zoitechat.svg',
  install_dir: join_paths(icondir, 'scalable/apps')
)
